# xi-tinkerer

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.tsx  bindings.ts  index.css  index.tsx  util.ts
client/src-tauri/: Cargo.toml  tauri.conf.json  updater.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: app_persistence.rs  cli.rs  commands.rs  dat_query.rs  errors.rs  main.rs  state.rs
client/src/components/: DatTable.tsx  FFXISelect.tsx  Home.tsx  Logs.tsx  ProjectSelect.tsx  Select.tsx  Sidebar.tsx  Statusbar.tsx
client/src/store/: folders.ts  index.tsx  logs.ts  processing.ts  workingFiles.ts
crates/common/: Cargo.toml
crates/common/src/: byte_functions.rs  byte_walker.rs  checking_byte_walker.rs  file_byte_walker.rs  lib.rs  vec_byte_walker.rs  writing_byte_walker.rs
crates/dats/: Cargo.toml
crates/dats/src/: base.rs  context.rs  dat_format.rs  enums.rs  flags.rs  id_mapping.rs  image.rs  lib.rs  sanitize_filename.rs  serde_base64.rs  serde_flags.rs  serde_hex.rs  utils.rs
crates/dats/src/formats/: dialog.rs  dmsg.rs  dmsg1_string_table.rs  dmsg2_string_table.rs  dmsg3_string_table.rs  entity_names.rs  item_info.rs  menu_table.rs  mod.rs  status_info.rs  string_table.rs  xistring_table.rs
crates/encoding/: Cargo.toml
crates/encoding/conversion_tables/: README.md
crates/encoding/src/: conversion_tables.rs  decoder.rs  encoder.rs  lib.rs  named_bytes.rs
crates/processor/: Cargo.toml
crates/processor/src/: converters.rs  dat_descriptor.rs  lib.rs  processor.rs
